2000-12-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel.el (binary-to-text-funcall): Bind
	`default-process-coding-system', `input-coding-system',
	`output-coding-system', `program-coding-system-alist', and
	`selective-display' for old Emacsen.  It won't work with Nemacs.
	(binary-funcall): Bind `default-kanji-flag',
	`default-kanji-process-code', `default-mc-flag',
	`default-process-coding-system', `input-coding-system',
	`kanji-flag', `mc-flag', `output-coding-system',
	`program-coding-system-alist', `program-kanji-code-alist'
	and `selective-display' for old Emacsen.
	(binary-find-file-noselect): Alias to
	`find-file-noselect-as-binary'.
	(binary-insert-encoded-file): Alias to
	`insert-file-contents-as-binary'.
	(binary-write-decoded-region): Alias to `write-region-as-binary'.
	(8bit-write-decoded-region): Use `write-region-as-coding-system'
	with the 1st arg `raw-text'.
	(8bit-insert-encoded-file): Alias to
	`insert-file-contents-as-raw-text'.


2000-12-25  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* FLIM: Version 1.14.2 (Yagi-Nishiguchi) released.

2000-12-23  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* smtpmail.el (smtpmail-send-it): Use
	`binary-write-decoded-region' instead of `binary-write-region'.

	* mmexternal.el (mmexternal-require-buffer): Use
	`binary-insert-encoded-file' instead of
	`binary-insert-file-contents'.
	(mime-write-entity-body): Use `binary-write-decoded-region'
	instead of `binary-write-region'.

	* mmbuffer.el (mime-write-entity-body): Use
	`binary-write-decoded-region' instead of `binary-write-region'.

	* mel.el: - Don't require `raw-io'.
	(8bit-insert-encoded-file): New function.
	(8bit-write-decoded-region): New function.
	(7bit-insert-encoded-file): New alias.
	(7bit-write-decoded-region): New alias.
	(binary-insert-encoded-file): New alias.
	(binary-find-file-noselect): New function.
	(binary-funcall): New function.
	(binary-to-text-funcall): New function.
	(mime-insert-encoded-file of "base64"): Use