@@ -1,3 +1,12 @@
+2000-12-28  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mel.el (binary-to-text-funcall, binary-funcall): Rewrite using
+	`static-cond'.
+
+2000-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
+
+	* mime-conf.el (mime-mailcap-file): Turn to non user option.
+
 2000-12-26  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mel.el (binary-to-text-funcall): Bind
